# recipe-scraper-mlops

./: .gitignore  .gitmodules  01_terraform_provisioning.ipynb  02_node1_cluster_bootstrap.ipynb  02v2_node1_cluster_bootstrap.ipynb  03_manual_training_workflow_cli.ipynb  README-ARGOCD-KUBECTL.md  README.md  docker-compose.yaml  init.sql
data/: .gitignore  Dockerfile  Training_data.md  init.sql  requirements.txt
data/quality/: check_ingestion_quality.py  check_training_quality.py  checks.py  monitor_live_drift.py
data/quality/soda/: checks.yml  (+1 more)
data/reports/: ingestion_quality_report.json
data/scripts/: 01_ingest_and_transform.py  02_quality_ingestion.py  02_quality_training.py  03_data_generator.py  04_online_features.py  05_batch_training_pipeline.py  06_monitor_drift.py  07_generate_mock_inference_log.py  08_monitor_feedback_quality.py  mealie_cleaner.py
devops/ansible/: ansible.cfg  inventory.yml
devops/argocd/: README.md  kustomization.yaml  project.yaml
devops/grafana/: dashboard.json
devops/mealie-patches/: README.md  __init__.py  pyproject.toml  recipe_cleaning_feedback.py  recipe_scraper.py  triton_cleaner.py
devops/notebooks/: 00_intro.ipynb  01_setup_env_tf.ipynb  02_provision_tf.ipynb  03_setup_env_ansible.ipynb  04_practice_ansible.ipynb  05_deploy_k8s.ipynb  06_post_k8s.ipynb  07_configure_argocd.ipynb  11_delete.ipynb  x_setup_sg.ipynb
devops/workflows/: README.md  cronworkflow-retraining.yaml  kustomization.yaml  manual-training-workflow.yaml  mlflow-model-promoter.yaml  promote.py  rbac.yaml  workflow-template-training.yaml
serving/: 01_create_server (1).ipynb  01_create_server.ipynb  README.md  kind-config.yaml  mealie_cleaner.py
serving/docker/: Dockerfile.jupyter-pytorch-tensorrt  Dockerfile.swift  Dockerfile.triton  docker-compose-data.yaml  docker-compose-triton.yaml  prometheus.yml
serving/k8s/: analysis-template.yaml  mealie-cleaner-deployment.yaml  triton-rollout.yaml  triton-service.yaml
serving/workspace/: 2_measure_torch_eager_and onnx.ipynb  4_optimize_onnx.ipynb  5_ep_pytorch.ipynb  5_measure_torch _compiled_and_onnx.ipynb  5_measure_torch _eager_mode_and_onnx.ipynb  6_triton_inference_server_test.ipynb.ipynb  7_optimize_onnx_two_dynamic_quantizations.ipynb  7_triton_client_wrapper.ipynb  8_ep.ipynb  input.json
shared/: sample_input_cleaner.json  sample_output_cleaner.json
training/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  accelerate_config.cpu.yaml  accelerate_config.yaml  config.t5-base.yaml  config.t5-large.yaml  config.t5-small.yaml  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  train.py
training/config/: config.t5-base.yaml  config.t5-large.yaml  config.t5-small.yaml  config.yaml  optuna.yaml
training/notebooks/: create_server.ipynb  train-experiment.ipynb  train_workbench.ipynb
training/scripts/: audit_token_lengths.py  run_training.sh  select_torch_build.sh
training/tests/: test_train.py
training/utils/: __init__.py  utils_core.py  utils_eval.py  utils_logging.py  utils_mlflow.py  utils_optuna.py  utils_recipes.py
(+60 files in other folders)
