[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.79",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "minio>=7.2.20",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "redis>=7.4.0",
    "tqdm>=4.67.3",
]
