[project]
name = "recipe-correction-training"
version = "0.1.0"
requires-python = ">=3.10"

# Core deps — needed by both training and dev containers
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "mlflow>=2.12.0",
    "boto3>=1.34.0",
    "pynvml>=11.5.0",
    "optuna>=3.6.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipdb>=0.13.0",
    "pytest>=8.0.0",
]